[gd_scene load_steps=17 format=3 uid="uid://h7usaqgy2jk6"]

[ext_resource type="PackedScene" uid="uid://b84cnod4v2105" path="res://scenes/donut.tscn" id="1_itxqv"]
[ext_resource type="PackedScene" uid="uid://13ypau7ceaf1" path="res://scenes/player.tscn" id="2_v0l8b"]
[ext_resource type="Texture2D" uid="uid://xl82473tpi5" path="res://assets/spacebar.png" id="4_0ha60"]
[ext_resource type="Script" uid="uid://ugjodhv4yyv7" path="res://scripts/tutorial.gd" id="4_4j5ol"]
[ext_resource type="Script" uid="uid://bganspvkg2i8m" path="res://scripts/game_manager.gd" id="4_brvut"]
[ext_resource type="Script" uid="uid://c6be2l2qqmgwn" path="res://scripts/ui.gd" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://dv2htjcef1bf4" path="res://assets/background.jpg" id="7_o6xl0"]
[ext_resource type="AudioStream" uid="uid://cfqbdcq6ixqeu" path="res://assets/click.mp3" id="8_tipki"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o6xl0"]
texture = ExtResource("7_o6xl0")
modulate_color = Color(0.505344, 0.505344, 0.505344, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j5ol"]
atlas = ExtResource("4_0ha60")
region = Rect2(0, 32, 163, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1hux"]
atlas = ExtResource("4_0ha60")
region = Rect2(0, 0, 163, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wp4xf"]
animations = [{
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_4j5ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1hux")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbgi4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
bg_color = Color(1, 0.588235, 0.776471, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(1, 0.392157, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(1, 0.823529, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[node name="Main" type="Node"]

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="Panel" parent="BG"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o6xl0")

[node name="Tutorial" type="CanvasLayer" parent="."]
script = ExtResource("4_4j5ol")

[node name="spacebar" type="AnimatedSprite2D" parent="Tutorial"]
texture_filter = 1
position = Vector2(600, 600)
scale = Vector2(2.85094, 2.85094)
sprite_frames = SubResource("SpriteFrames_wp4xf")
autoplay = "default"
frame_progress = 0.927732

[node name="GameObjects" type="Node" parent="."]

[node name="Donut" parent="GameObjects" instance=ExtResource("1_itxqv")]
position = Vector2(600, 325)

[node name="Player" parent="GameObjects" instance=ExtResource("2_v0l8b")]
unique_name_in_owner = true
position = Vector2(600, 125)
scale = Vector2(7.2, 8.26256)
planet_center = Vector2(600, 325)

[node name="Camera2D" type="Camera2D" parent="GameObjects/Player"]
position = Vector2(0, -4.76837e-07)
scale = Vector2(16.28, 1.59757)
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="Score" type="Label" parent="GameObjects"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 515.0
offset_top = 240.0
offset_right = -467.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_tefeu")

[node name="PauseMenu" type="Panel" parent="UI"]
unique_name_in_owner = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -212.5
offset_right = 275.0
offset_bottom = 212.5
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="UI/PauseMenu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -116.5
offset_right = 200.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Main Menu" type="Button" parent="UI/PauseMenu/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbgi4")
theme_override_styles/hover = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/normal = SubResource("StyleBoxFlat_tipki")
text = "Main Menu"
icon_alignment = 1

[node name="Back" type="Button" parent="UI/PauseMenu/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 55
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbgi4")
theme_override_styles/hover = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/normal = SubResource("StyleBoxFlat_tipki")
text = "back"
icon_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="UI"]
z_index = 1
offset_right = 129.0
offset_bottom = 137.0

[node name="Pause" type="Button" parent="UI/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbgi4")
theme_override_styles/hover = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/normal = SubResource("StyleBoxFlat_tipki")
text = "‚è∏"
icon_alignment = 1

[node name="GameManager" type="Node" parent="."]
process_mode = 1
script = ExtResource("4_brvut")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_tipki")

[connection signal="enemy_close" from="GameObjects/Player" to="Tutorial" method="_on_player_enemy_close"]
[connection signal="enemy_not_close" from="GameObjects/Player" to="Tutorial" method="_on_player_enemy_not_close"]
[connection signal="pressed" from="UI/PauseMenu/Buttons/Main Menu" to="UI" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/PauseMenu/Buttons/Back" to="UI" method="_on_back_pressed"]
[connection signal="pressed" from="UI/BoxContainer/Pause" to="UI" method="_on_pause_pressed"]
